deployment/k8s/inference-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inference-service
  labels:
    app: inference-service
spec:
  type: ClusterIP
  selector:
    component: inference-app
  ports:
    - port: 5000
      name: http
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inference-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: inference-app
  template:
    metadata:
      labels:
        component: inference-app
    spec:
      containers:
        - name: inference-app
          image: inference-service:latest
          imagePullPolicy: Never
          command: ["gunicorn"]
          args: ["-b", "0.0.0.0:5000", "src.serve_model:app"]
          ports:
            - containerPort: 5000
