deployment/k8s/training-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: training-service
  labels:
    app: training-service
spec:
  type: ClusterIP
  selector:
    component: training-app
  ports:
    - port: 5000
      name: http
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: training-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: training-app
  template:
    metadata:
      labels:
        component: training-app
    spec:
      containers:
        - name: training-app
          image: ghcr.io/adam-tu/remla-project/training-service:latest
          imagePullPolicy: Never
          command: ["sh"]
          args: ["src/startup_training.sh"]
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: project-shared
              mountPath: /data/shared/
      volumes:
        - name: project-shared
          hostPath:
            path: /data/shared/
